managed/apps/aa/components/api/base/deploy-api-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-api
  namespace: aa
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: aa
      component: api
      container: api
  replicas: 1
  template:
    metadata:
      labels:
        app: aa
        component: api
        container: api
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/aa/api/main/api:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: "/etc/secrets/google"
              name: google
              readOnly: true
      volumes:
        - name: google
          secret:
            secretName: google
      imagePullSecrets:
        - name: image-pull-secret
