managed/apps/aa/components/api/base/ingress-api.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  namespace: aa
  # annotations:
  #  nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - api.addressaustralia.american-broomstick.com
      secretName: api-tls
  rules:
    - host: api.addressaustralia.american-broomstick.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-api-api
                port:
                  number: 8080
